# node-resolve

./: .travis.yml  CHANGELOG.md  Cargo.toml  readme.md
.github/workflows/: ci.yml
fixtures/package-json/invalid/: package.json
fixtures/package-json/main-dir/: package.json
fixtures/package-json/main-file/: package.json
fixtures/package-json/main-file-noext/: package.json
fixtures/package-json/main-index/: package.json
fixtures/package-json/module-main/: package.json
src/: lib.rs
