[package]
name = "node-resolve"
version = "1.1.0"
description = "The Node.js module resolution algorithm"
authors = ["Renée Kooi <renee@kooi.me>"]
repository = "https://github.com/goto-bus-stop/node-resolve"
documentation = "https://docs.rs/node-resolve"
license = "Apache-2.0"
readme = "readme.md"

[dependencies]
serde_json = "1.0.10"
node-builtins = "0.1.0"

[lib]
doctest = false
